mat-tab-body-wrapper class finally can make use of 100% height. Breakpoints added, for screen widths less than 1000px we now switch to sidenav-mode 'over'. The minimize button is overlapped by the sidenav panel, but that is how it should be. There is one bug with the LayoutService - When having a screen size less than 920px the value returned of the function getToolBarHeightInPx() is 48px, which is the toolbar height for mobile devices. The problem is that dialog headers are still 64px in height. R-Quickhelp component has an input attribute [extend] making it either an expansion-panel or a mat-card.

--- a/src/app/util/components/code-editor-overlay/code-editor-overlay.style.scss
+++ b/src/app/util/components/code-editor-overlay/code-editor-overlay.style.scss
@@ -1,3 +1,5 @@
+@import "../../../../wave-app-theme";
+
 mat-dialog-content {
     max-width: unset;
     padding-left: 0px;
@@ -8,8 +10,9 @@ mat-sidenav-container {
     padding: 0px;
 }
 
-.mat-tab-body {
-    height: 100%;
+
+::ng-deep .mat-tab-body-wrapper {
+    flex-grow: 1;
 }
 
 .unset-height {
@@ -18,4 +21,9 @@ mat-sidenav-container {
 
 .actions {
     padding: 1rem;
+}
+.no-layers {
+    color: mat-color(map-get($wave-app-theme, foreground), secondary-text);
+    margin-top: 50%;
+    text-align: center;
 }
